# cpex

./: .env.example  .gitignore  .lycheeignore  .yamllint  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MIGRATION_MCP_V2.md  Makefile  README.md  SECURITY.md  clippy.toml  deny.toml  pyproject.toml  release.toml  rust-toolchain.toml  rustfmt.toml
bindings/python/: Cargo.toml  MIGRATION.md  README.md  build.rs  pyproject.toml
bindings/python/src/: builtins.rs  conversions.rs  error.rs  lib.rs  manager.rs  result.rs
bindings/python/tests/: conftest.py  test_conversions.py  test_errors.py  test_manager.py  test_result.py  test_wrappers.py
builtins/cedarling/: Cargo.toml
builtins/cedarling/src/: error.rs  lib.rs
builtins/cedarling/tests/: pdp_basic.rs
builtins/pdps/cedar-direct/: Cargo.toml
builtins/pdps/cel/: Cargo.toml
builtins/plugins/audit-logger/: Cargo.toml
builtins/plugins/delegator-biscuit/: Cargo.toml
builtins/plugins/delegator-oauth/: Cargo.toml
builtins/plugins/elicitation-ciba/: Cargo.toml
builtins/plugins/identity-jwt/: Cargo.toml
crates/apl-cmf/: Cargo.toml
crates/apl-cmf/src/: agent.rs  capability_namespaces.rs  completion.rs  constants.rs  custom.rs  delegation.rs  extensions_bridge.rs  framework.rs  http.rs  lib.rs  llm.rs  mcp.rs  meta.rs  payload.rs  provenance.rs  request.rs  security.rs
crates/apl-cmf/tests/: end_to_end.rs
crates/apl-core/: Cargo.toml
crates/apl-core/src/: attribute_source.rs  attributes.rs  constraint.rs  evaluator.rs  lib.rs  parser.rs  pipeline.rs  plugin_decl.rs  route.rs  rules.rs  step.rs
crates/apl-core/tests/: yaml_end_to_end.rs
crates/apl-cpex/: Cargo.toml
crates/apl-cpex/src/: attribute_source.rs  candidate_constraint.rs  cmf_invoker.rs  delegation_invoker.rs  dispatch_plan.rs  elicitation_invoker.rs  lib.rs  parallel_safety.rs  pdp_router.rs  register.rs  route_handler.rs  session_resolver.rs  session_store.rs  visitor.rs
crates/apl-cpex/tests/: attribute_source_e2e.rs  canonical_authn_authz_e2e.rs  capability_gating.rs  cmf_invoker_dispatch.rs  config_override.rs  delegate_step_e2e.rs  elicit_step_e2e.rs  elicit_then_delegate_e2e.rs  end_to_end_route.rs  global_http_authz.rs  restrict_e2e.rs  visitor_e2e.rs
crates/apl-identity-jwt/: Cargo.toml
crates/apl-identity-jwt/src/: claim_map.rs  config.rs  factory.rs  lib.rs  resolver.rs  trusted_issuer.rs
crates/apl-identity-jwt/tests/: jwks_url_e2e.rs  jwt_e2e.rs
crates/apl-pdp-cedar-direct/: Cargo.toml
crates/apl-pdp-cedar-direct/src/: cedar_attrs.rs  decision.rs  entities.rs  error.rs  factory.rs  lib.rs  request.rs  resolver.rs  template.rs
crates/apl-pdp-cedar-direct/tests/: basic_allow_deny.rs  small_stack_eval.rs  visitor_pdp_config.rs
crates/apl-pdp-cel/: Cargo.toml
crates/apl-pdp-cel/src/: activation.rs  error.rs  factory.rs  lib.rs  resolver.rs
crates/apl-pdp-cel/tests/: visitor_cel_config.rs
crates/apl-pii-scanner/: Cargo.toml
crates/apl-pii-scanner/src/: config.rs  factory.rs  lib.rs  scanner.rs
crates/cpex/: Cargo.toml
crates/cpex-builtins/: Cargo.toml
crates/cpex-builtins/src/: lib.rs
crates/cpex-core/: Cargo.toml
crates/cpex-core/examples/: cmf_demo_sub.rs  plugin_demo.rs
crates/cpex-core/src/: config.rs  context.rs  error.rs  executor.rs  factory.rs  lib.rs  manager.rs  plugin.rs  registry.rs  visitor.rs
crates/cpex-core/tests/: delegation_e2e.rs  identity_e2e.rs  identity_route_e2e.rs
crates/cpex-dynamic-plugin/: Cargo.toml  README.md
crates/cpex-dynamic-plugin/src/: abi.rs  host.rs  lib.rs  plugin.rs
crates/cpex-dynamic-plugin/tests/: dlopen_e2e.rs
crates/cpex-ffi/: Cargo.toml  RELEASE.md
crates/cpex-ffi/src/: apl.rs  lib.rs
crates/cpex-hosts-python/: .gitignore  Cargo.toml
crates/cpex-hosts-python/src/: lib.rs
crates/cpex-hosts-python/tests/: config_e2e.rs  isolated_e2e.rs
crates/cpex-orchestration/: Cargo.toml
crates/cpex-orchestration/src/: lib.rs
crates/cpex-python/: Cargo.toml  build.rs
crates/cpex-python/src/: conversions.rs  error.rs  lib.rs  manager.rs  payload_registry.rs
crates/cpex-wasm-host/: Cargo.toml  Makefile  README.md
crates/cpex-wasm-host/benchmarking/: README.md  comprehensive.rs  invocation.rs  plot_results.py  results.md
crates/cpex-wasm-host/config/: config.yaml  config_capabilities.yaml  config_identity.yaml  config_plugin_demo.yaml  config_wasm_sandbox.yaml
crates/cpex-wasm-host/examples/: smoke_test.rs  wasm_capabilities_demo.rs  wasm_generic_payload_demo.rs  wasm_identity_resolve_demo.rs  wasm_plugin_demo.rs
crates/cpex-wasm-host/src/: conversions.rs  factory.rs  lib.rs  main.rs  payload_registry.rs  policy_loader.rs  sandbox_manager.rs
crates/cpex-wasm-host/tests/: identity_checker_wasm.rs  sandbox_enforcement.rs  test_custom_payload_pipeline.rs  test_policy_loader.rs  test_sandbox_env.rs  test_sandbox_isolation.rs  test_sandbox_network.rs  test_security_enforcement.rs  wasm_plugin_instances.rs
crates/cpex-wasm-host/wasm/: audit_logger.wasm  identity_checker.wasm  plugin.wasm
crates/cpex-wasm-host/wit/: world.wit
crates/cpex-wasm-plugin/: Cargo.toml  Makefile  README.md  details.md  header_injector.wasm  plugin.wasm
crates/cpex-wasm-plugin/specs/: current-implementation-issues.md  generalized-payload-interface.md  implementation_phase.md  limitations.md
crates/cpex-wasm-plugin/src/: conversions.rs  lib.rs  plugin.rs
crates/cpex-wasm-plugin/wit/: world.wit
crates/cpex/src/: lib.rs
examples/tutorial/: Cargo.toml  README.md
examples/tutorial/examples/: capstone.rs  m00_setup.rs  m01_hello.rs  m02_identity.rs  m03_shaping.rs  m04_effects.rs  m05_pdp.rs  m06_delegation.rs  m07_tainting.rs  m08_elicitation.rs  m09_custom_plugin.rs  m10_testing.rs  wait_for_idp.rs
examples/tutorial/idp/: README.md  docker-compose.yml  realm-export.json
examples/tutorial/policies/: capstone-nodeleg.yaml  capstone.yaml  m01.yaml  m02.yaml  m03.yaml  m04.yaml  m05.yaml  m06.yaml  m07.yaml  m08.yaml  m09.yaml
examples/tutorial/recordings/: README.md  record.sh
examples/tutorial/src/: approvals.rs  (+5 more)
integrations/praxis-cpex/: Cargo.toml  README.md
(+384 files in other folders)
