# Location: ./Cargo.toml
# Copyright 2025
# SPDX-License-Identifier: Apache-2.0
# Authors: Teryl Taylor
#
# Workspace root for the CPEX Rust crates.

[workspace]
resolver = "2"
members = [
    "crates/cpex-core",
    "crates/cpex-orchestration",
    "crates/cpex-sdk",
    "crates/cpex-ffi",
    "crates/apl-core",
    "crates/apl-cmf",
    "crates/apl-cpex",
    "crates/apl-pdp-cedar-direct",
    "crates/apl-cedarling",
    "crates/apl-identity-jwt",
    "crates/apl-delegator-oauth",
    "crates/apl-delegator-biscuit",
    "crates/apl-pii-scanner",
    "crates/apl-audit-logger",
    "examples/go-demo/ffi",
]

# `default-members` controls what `cargo build` / `cargo test` (with no
# `-p` or `--workspace` flag) picks up. Cedarling integration crates
# pull ~200 transitive deps (jsonwebtoken, reqwest, sparkv, datalogic-rs,
# flate2, etc.) and slow default builds significantly — excluding them
# from default-members keeps everyday iteration fast.
#
# To exercise Cedarling crates:
#   cargo build --workspace                # all members
#   cargo build -p apl-cedarling           # just this one
#   cargo test --workspace                 # full sweep (CI)
default-members = [
    "crates/cpex-core",
    "crates/cpex-orchestration",
    "crates/cpex-sdk",
    "crates/cpex-ffi",
    "crates/apl-core",
    "crates/apl-cmf",
    "crates/apl-cpex",
    "crates/apl-pdp-cedar-direct",
    "crates/apl-identity-jwt",
    "crates/apl-delegator-oauth",
    "crates/apl-delegator-biscuit",
    "crates/apl-pii-scanner",
    "crates/apl-audit-logger",
    "examples/go-demo/ffi",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Teryl Taylor", "Fred Araujo"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_yaml = "0.9"
serde_json = "1"
async-trait = "0.1"
thiserror = "2"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
paste = "1"
futures = "0.3"
hashbrown = "0.15"
arc-swap = "1.7"
wildmatch = "2"
rmp-serde = "1"
serde_bytes = "0.11"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
